tests/snapshots/cli_json__snapshot_config_help.snap
---
source: tests/cli_json.rs
expression: normalize_help(&output.stdout)
---
Inspect or create the rgfile configuration file

Usage: rgfile config [OPTIONS] <COMMAND>

Commands:
  path  Print the configuration file path
  show  Show the effective configuration
  init  Create a configuration file
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global Options:
  -v, --verbose...     Increase logging verbosity (-v for info, -vv for debug)
      --config <PATH>  Load configuration from a specific TOML file
      --no-config      Do not load a configuration file
      --history        Enable history for this run
      --no-history     Disable history for this run
