tests/snapshots/cli_json__snapshot_gfile_help.snap
---
source: tests/cli_json.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Upload and download GigaFile public web files

Usage: gfile [OPTIONS] <COMMAND>

Commands:
  download  Download a file from a public GigaFile page
  upload    Upload a local file
  help      Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...  Increase logging verbosity (-v for info, -vv for debug)
  -h, --help        Print help
  -V, --version     Print version
