tests/snapshots/cli_json__snapshot_json_info_needs_key.snap
---
source: tests/cli_json.rs
expression: normalize_json(&output.stdout)
---
{
  "files": [
    {
      "approx_bytes": 10240,
      "display_name": "example file.bin",
      "display_name_may_be_masked": true,
      "display_size": "10KB"
    }
  ],
  "key_required": true,
  "kind": "single",
  "status": "ok"
}
