tests/snapshots/cli_json__snapshot_json_single_success.snap
---
source: tests/cli_json.rs
expression: normalize_json(&output.stdout)
---
{
  "failed": 0,
  "files": [
    {
      "bytes": 5,
      "error": null,
      "name": "example file.bin",
      "path": "<PATH>",
      "resumed": false,
      "threads": 1
    }
  ],
  "kind": "single",
  "status": "ok"
}
